Tut/3/initial/src/main/bkit/parser/.antlr/BKITParser.py
# Generated from c:\Users\ASUS\Desktop\201\PPL\Tut\3\initial\src\main\bkit\parser\BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'return'", "'float'", "'int'", "'{'", 
                     "'}'", "'('", "')'", "';'", "','", "'='", "'+'", "'-'", 
                     "'*'", "'/'" ]

    symbolicNames = [ "<INVALID>", "RETURN", "FLOAT", "INT", "LB", "RB", 
                      "LP", "RP", "SM", "CM", "EQ", "ADD", "SUB", "MUL", 
                      "DIV", "FLOATLIT", "INTLIT", "ID", "WS", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_var_declaration = 1
    RULE_var_type = 2
    RULE_id_list = 3
    RULE_func_declaration = 4
    RULE_param_declaration = 5
    RULE_list_of_params = 6
    RULE_list_of_non_null_params = 7
    RULE_param = 8
    RULE_body = 9
    RULE_stament = 10
    RULE_assignment_stament = 11
    RULE_expression = 12
    RULE_exp1 = 13
    RULE_exp2 = 14
    RULE_exp3 = 15
    RULE_operands = 16
    RULE_sub_expression = 17
    RULE_call_stament = 18
    RULE_expression_list = 19
    RULE_non_null_expression_list = 20
    RULE_return_stament = 21

    ruleNames =  [ "program", "var_declaration", "var_type", "id_list", 
                   "func_declaration", "param_declaration", "list_of_params", 
                   "list_of_non_null_params", "param", "body", "stament", 
                   "assignment_stament", "expression", "exp1", "exp2", "exp3", 
                   "operands", "sub_expression", "call_stament", "expression_list", 
                   "non_null_expression_list", "return_stament" ]

    EOF = Token.EOF
    RETURN=1
    FLOAT=2
    INT=3
    LB=4
    RB=5
    LP=6
    RP=7
    SM=8
    CM=9
    EQ=10
    ADD=11
    SUB=12
    MUL=13
    DIV=14
    FLOATLIT=15
    INTLIT=16
    ID=17
    WS=18
    ERROR_CHAR=19
    UNCLOSE_STRING=20
    ILLEGAL_ESCAPE=21
    UNTERMINATED_COMMENT=22

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declarationContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declarationContext,i)


        def func_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Func_declarationContext)
            else:
                return self.getTypedRuleContext(BKITParser.Func_declarationContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 46
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 44
                    self.var_declaration()
                    pass

                elif la_ == 2:
                    self.state = 45
                    self.func_declaration()
                    pass


                self.state = 48 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKITParser.FLOAT or _la==BKITParser.INT):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(BKITParser.Var_typeContext,0)


        def id_list(self):
            return self.getTypedRuleContext(BKITParser.Id_listContext,0)


        def SM(self):
            return self.getToken(BKITParser.SM, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_var_declaration




    def var_declaration(self):

        localctx = BKITParser.Var_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.var_type()
            self.state = 51
            self.id_list()
            self.state = 52
            self.match(BKITParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(BKITParser.INT, 0)

        def FLOAT(self):
            return self.getToken(BKITParser.FLOAT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_var_type




    def var_type(self):

        localctx = BKITParser.Var_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            _la = self._input.LA(1)
            if not(_la==BKITParser.FLOAT or _la==BKITParser.INT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def CM(self):
            return self.getToken(BKITParser.CM, 0)

        def id_list(self):
            return self.getTypedRuleContext(BKITParser.Id_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_id_list




    def id_list(self):

        localctx = BKITParser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_id_list)
        try:
            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.match(BKITParser.ID)
                self.state = 57
                self.match(BKITParser.CM)
                self.state = 58
                self.id_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.match(BKITParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(BKITParser.Var_typeContext,0)


        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def param_declaration(self):
            return self.getTypedRuleContext(BKITParser.Param_declarationContext,0)


        def body(self):
            return self.getTypedRuleContext(BKITParser.BodyContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_func_declaration




    def func_declaration(self):

        localctx = BKITParser.Func_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_func_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.var_type()
            self.state = 63
            self.match(BKITParser.ID)
            self.state = 64
            self.param_declaration()
            self.state = 65
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(BKITParser.LP, 0)

        def list_of_params(self):
            return self.getTypedRuleContext(BKITParser.List_of_paramsContext,0)


        def RP(self):
            return self.getToken(BKITParser.RP, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_param_declaration




    def param_declaration(self):

        localctx = BKITParser.Param_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_param_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(BKITParser.LP)
            self.state = 68
            self.list_of_params()
            self.state = 69
            self.match(BKITParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_of_paramsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_of_non_null_params(self):
            return self.getTypedRuleContext(BKITParser.List_of_non_null_paramsContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_list_of_params




    def list_of_params(self):

        localctx = BKITParser.List_of_paramsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_list_of_params)
        try:
            self.state = 73
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.FLOAT, BKITParser.INT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.list_of_non_null_params()
                pass
            elif token in [BKITParser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_of_non_null_paramsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(BKITParser.ParamContext,0)


        def SM(self):
            return self.getToken(BKITParser.SM, 0)

        def list_of_non_null_params(self):
            return self.getTypedRuleContext(BKITParser.List_of_non_null_paramsContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_list_of_non_null_params




    def list_of_non_null_params(self):

        localctx = BKITParser.List_of_non_null_paramsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_list_of_non_null_params)
        try:
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.param()
                self.state = 76
                self.match(BKITParser.SM)
                self.state = 77
                self.list_of_non_null_params()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.param()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(BKITParser.Var_typeContext,0)


        def id_list(self):
            return self.getTypedRuleContext(BKITParser.Id_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_param




    def param(self):

        localctx = BKITParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.var_type()
            self.state = 83
            self.id_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(BKITParser.LB, 0)

        def RB(self):
            return self.getToken(BKITParser.RB, 0)

        def var_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declarationContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declarationContext,i)


        def stament(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.StamentContext)
            else:
                return self.getTypedRuleContext(BKITParser.StamentContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_body




    def body(self):

        localctx = BKITParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(BKITParser.LB)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.RETURN) | (1 << BKITParser.FLOAT) | (1 << BKITParser.INT) | (1 << BKITParser.ID))) != 0):
                self.state = 88
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BKITParser.FLOAT, BKITParser.INT]:
                    self.state = 86
                    self.var_declaration()
                    pass
                elif token in [BKITParser.RETURN, BKITParser.ID]:
                    self.state = 87
                    self.stament()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 93
            self.match(BKITParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StamentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SM(self):
            return self.getToken(BKITParser.SM, 0)

        def assignment_stament(self):
            return self.getTypedRuleContext(BKITParser.Assignment_stamentContext,0)


        def call_stament(self):
            return self.getTypedRuleContext(BKITParser.Call_stamentContext,0)


        def return_stament(self):
            return self.getTypedRuleContext(BKITParser.Return_stamentContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_stament




    def stament(self):

        localctx = BKITParser.StamentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stament)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 95
                self.assignment_stament()
                pass

            elif la_ == 2:
                self.state = 96
                self.call_stament()
                pass

            elif la_ == 3:
                self.state = 97
                self.return_stament()
                pass


            self.state = 100
            self.match(BKITParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assignment_stamentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def EQ(self):
            return self.getToken(BKITParser.EQ, 0)

        def expression(self):
            return self.getTypedRuleContext(BKITParser.ExpressionContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_assignment_stament




    def assignment_stament(self):

        localctx = BKITParser.Assignment_stamentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_assignment_stament)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(BKITParser.ID)
            self.state = 103
            self.match(BKITParser.EQ)
            self.state = 104
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp1(self):
            return self.getTypedRuleContext(BKITParser.Exp1Context,0)


        def ADD(self):
            return self.getToken(BKITParser.ADD, 0)

        def expression(self):
            return self.getTypedRuleContext(BKITParser.ExpressionContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_expression




    def expression(self):

        localctx = BKITParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expression)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.exp1()
                self.state = 107
                self.match(BKITParser.ADD)
                self.state = 108
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.exp1()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp2(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Exp2Context)
            else:
                return self.getTypedRuleContext(BKITParser.Exp2Context,i)


        def SUB(self):
            return self.getToken(BKITParser.SUB, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_exp1




    def exp1(self):

        localctx = BKITParser.Exp1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_exp1)
        try:
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.exp2(0)
                self.state = 114
                self.match(BKITParser.SUB)
                self.state = 115
                self.exp2(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.exp2(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp3(self):
            return self.getTypedRuleContext(BKITParser.Exp3Context,0)


        def exp2(self):
            return self.getTypedRuleContext(BKITParser.Exp2Context,0)


        def DIV(self):
            return self.getToken(BKITParser.DIV, 0)

        def MUL(self):
            return self.getToken(BKITParser.MUL, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_exp2



    def exp2(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BKITParser.Exp2Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 28
        self.enterRecursionRule(localctx, 28, self.RULE_exp2, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.exp3()
            self._ctx.stop = self._input.LT(-1)
            self.state = 131
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 129
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                    if la_ == 1:
                        localctx = BKITParser.Exp2Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp2)
                        self.state = 123
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 124
                        self.match(BKITParser.DIV)
                        self.state = 125
                        self.exp3()
                        pass

                    elif la_ == 2:
                        localctx = BKITParser.Exp2Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp2)
                        self.state = 126
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 127
                        self.match(BKITParser.MUL)
                        self.state = 128
                        self.exp3()
                        pass

             
                self.state = 133
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Exp3Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operands(self):
            return self.getTypedRuleContext(BKITParser.OperandsContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_exp3




    def exp3(self):

        localctx = BKITParser.Exp3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_exp3)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.operands()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperandsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(BKITParser.INTLIT, 0)

        def FLOATLIT(self):
            return self.getToken(BKITParser.FLOATLIT, 0)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def call_stament(self):
            return self.getTypedRuleContext(BKITParser.Call_stamentContext,0)


        def sub_expression(self):
            return self.getTypedRuleContext(BKITParser.Sub_expressionContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_operands




    def operands(self):

        localctx = BKITParser.OperandsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_operands)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.match(BKITParser.INTLIT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.match(BKITParser.FLOATLIT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 138
                self.match(BKITParser.ID)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 139
                self.call_stament()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 140
                self.sub_expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sub_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(BKITParser.LP, 0)

        def expression(self):
            return self.getTypedRuleContext(BKITParser.ExpressionContext,0)


        def RP(self):
            return self.getToken(BKITParser.RP, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_sub_expression




    def sub_expression(self):

        localctx = BKITParser.Sub_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_sub_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(BKITParser.LP)
            self.state = 144
            self.expression()
            self.state = 145
            self.match(BKITParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Call_stamentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def LP(self):
            return self.getToken(BKITParser.LP, 0)

        def expression_list(self):
            return self.getTypedRuleContext(BKITParser.Expression_listContext,0)


        def RP(self):
            return self.getToken(BKITParser.RP, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_call_stament




    def call_stament(self):

        localctx = BKITParser.Call_stamentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 36, self.RULE_call_stament)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(BKITParser.ID)
            self.state = 148
            self.match(BKITParser.LP)
            self.state = 149
            self.expression_list()
            self.state = 150
            self.match(BKITParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def non_null_expression_list(self):
            return self.getTypedRuleContext(BKITParser.Non_null_expression_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_expression_list




    def expression_list(self):

        localctx = BKITParser.Expression_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 38, self.RULE_expression_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.LP) | (1 << BKITParser.FLOATLIT) | (1 << BKITParser.INTLIT) | (1 << BKITParser.ID))) != 0):
                self.state = 152
                self.non_null_expression_list()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Non_null_expression_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(BKITParser.ExpressionContext,0)


        def CM(self):
            return self.getToken(BKITParser.CM, 0)

        def non_null_expression_list(self):
            return self.getTypedRuleContext(BKITParser.Non_null_expression_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_non_null_expression_list




    def non_null_expression_list(self):

        localctx = BKITParser.Non_null_expression_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 40, self.RULE_non_null_expression_list)
        try:
            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.expression()
                self.state = 156
                self.match(BKITParser.CM)
                self.state = 157
                self.non_null_expression_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_stamentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(BKITParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(BKITParser.ExpressionContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_return_stament




    def return_stament(self):

        localctx = BKITParser.Return_stamentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 42, self.RULE_return_stament)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(BKITParser.RETURN)
            self.state = 163
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[14] = self.exp2_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def exp2_sempred(self, localctx:Exp2Context, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 3)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 2)
         




